The Tech Mann Upgrade
Upgraded for new website url

--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta name="author" content="Tech Guru Mann">
-    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj, soundcloud, electronic, c++, trance, house, production, comcast">
+    <meta name="description" content="An online portfolio of the Tech Mann, a horizontally-skilled engineer in all things cloud, AI, and games. Click here to see his games and apps!">
+    <meta name="author" content="The Tech Mann">
+    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, java, android, c#, unity, twitch, twitter, streaming, music, electronic, c++, production, comcast">
 
-    <meta property='og:title' content="Tech Guru Mann" />
-    <meta property="og:image" content="http://techgurumann.com/img/linkedin/linkedin_image.png" />
-    <meta property="og:url" content="http://www.techgurumann.com/" />
+    <meta property='og:title' content="The Tech Mann" />
+    <meta property="og:image" content="http://techmann.us/img/linkedin/linkedin_image.png" />
+    <meta property="og:url" content="http://www.techmann.us/" />
     <meta property="og:type" content="website" />
-    <meta property='og:description' content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!" />
-    <meta property="og:site_name" content="Tech Guru Mann">
-    <meta property="og:see_also" content="http://techgurumann.com/index.html">
+    <meta property='og:description' content="An online portfolio of the The Tech Mann, a horizontally-skilled engineer in all things cloud, AI, and games. Click here to see his games and apps!" />
+    <meta property="og:site_name" content="The Tech Mann">
+    <meta property="og:see_also" content="http://techmann.us/index.html">
 
-    <meta itemprop="name" content="Tech Guru Mann">
-    <meta itemprop="description" content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta itemprop="image" content="http://techgurumann.com/img/linkedin/linkedin_image.png">
+    <meta itemprop="name" content="The Tech Mann">
+    <meta itemprop="description" content="An online portfolio of the Tech Guru Mann, a horizontally-skilled engineer in all things cloud, AI, and games. Click here to see his games and apps!">
+    <meta itemprop="image" content="http://techmann.us/img/linkedin/linkedin_image.png">
 
-    <meta name="twitter:card" content="Tech Guru Mann">
-    <meta name="twitter:url" content="http://techgurumann.com">
-    <meta name="twitter:title" content="Tech Guru Mann">
-    <meta name="twitter:description" content="An online portfolio of the Tech Guru Mann, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta name="twitter:image" content="http://techgurumann.com/img/linkedin/linkedin_image.png">
+    <meta name="twitter:card" content="The Tech Mann">
+    <meta name="twitter:url" content="http://techmann.us">
+    <meta name="twitter:title" content="The Tech Mann">
+    <meta name="twitter:description" content="An online portfolio of the Tech Mann, a horizontally-skilled engineer in all things cloud, AI, and games. Click here to see his games and apps!">
+    <meta name="twitter:image" content="http://techmann.us/img/linkedin/linkedin_image.png">
 
-    <title>Tech Guru Mann</title>
+    <title>The Tech Mann</title>
 
     <link rel="author" href="https://plus.google.com/+EJMann"/>
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
@@ -95,7 +95,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Tech Guru Mann</a>
+                <a class="navbar-brand page-scroll" href="#page-top">The Tech Mann</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -126,7 +126,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Cloud Engineer</br>Fintech | VR | AI</br></h1>
+                <h1 id="homeHeading" style="text-shadow: 0.05em 0.05em #000000;">Engineering</br>Cloud | Games | AI</br></h1>
                 <!-- <hr>
                 <p style="text-shadow: 0.05em 0.05em #55b3ff;">Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p> -->
             </div>
@@ -137,13 +137,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">About the Tech Guru Mann</h2>
+                    <h2 class="section-heading">Story of the Engineer</h2>
                     <hr class="light">
-                    <p class="text-faded">From software auditor to virtual reality game developer, the Tech Guru Mann has come a long way. During his undergraduate career at Lehigh University, the tech guru worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
-                    <p class="text-faded">The guru has worked with big name companies like Ecotech Marine and Highmark Health, and was a technical R&D specialist for Comcast, the largest corporation in Center City Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
-                    <p class="text-faded">Today, the Tech Guru Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy.</p>
-                    <p class="text-faded">In his free time, the guru immerses himself in his musical efforts, DJing for video game communities, volunteering & assisting others at gaming conventions, and making his own music.</p>
-                    <p class="text-faded">The Tech Guru Mann is always focused and has worked hard for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
+                    <p class="text-faded">From software auditor to XR game developer, the Tech Mann has come a long way. During his undergraduate career at Lehigh University, the Tech Mann worked hard auditing software for Lehigh's Center for Advanced Materials and Nanotechnology through the school's work study program. After completing his Bachelor's degree in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then went on to develop AAA Northampton County's public website as an intern.</p>
+                    <p class="text-faded">The Tech Mann has worked with big name companies like Ecotech Marine and Highmark Health. He then became a technical R&D specialist for Comcast, the largest corporation in Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
+                    <p class="text-faded">Today, the Tech Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy.</p>
+                    <p class="text-faded">In his free time, the Tech Mann immerses himself in his musical efforts, making music for video game communities, volunteering, & assisting others at gaming conventions.</p>
+                    <p class="text-faded">The Tech Mann is remain focused for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at the <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
                 </div>
             </div>
         </div>
@@ -463,19 +463,7 @@
                         <tbody>
                             <tr>
                                 <td>C#</td>
-                                <td>5</td>
-                            </tr>
-                            <tr>
-                                <td>HTML</td>
-                                <td>6</td>
-                            </tr>
-                            <tr>
-                                <td>CSS</td>
-                                <td>6</td>
-                            </tr>
-                            <tr>
-                                <td>Javascript</td>
-                                <td>5</td>
+                                <td>8</td>
                             </tr>
                             <tr>
                                 <td>Java</td>
@@ -483,7 +471,23 @@
                             </tr>
                             <tr>
                                 <td>SQL</td>
+                                <td>6</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td>
+                                <td>6</td>
+                            </tr>
+                            <tr>
+                                <td>CSS</td>
                                 <td>5</td>
+                            </tr>
+                            <tr>
+                                <td>Javascript</td>
+                                <td>5</td>
+                            </tr>
+                            <tr>
+                                <td>Python</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>High Level Shader Language</td>
@@ -502,6 +506,10 @@
                                 <td>2</td>
                             </tr>
                             <tr>
+                                <td>C++</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
                                 <td>Node.js</td>
                                 <td>1</td>
                             </tr>
@@ -510,13 +518,47 @@
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>C++</td>
-                                <td>2</td>
-                            </tr>
-                            <tr>
                                 <td>Objective C</td>
                                 <td>1</td>
                             </tr>
+                            <tr>
+                                <td>React.js</td>
+                                <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered table-inversed">
+                        <thead class="thead-inverse">
+                            <tr>
+                                <th>Certifications</th>
+                                <th>Year Acquired</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a target="_blank" href="https://learn.microsoft.com/api/credentials/share/en-us/mann0nomix/2AE3DB3B3C0B0022?sharingId=204F6D5D32A0A419" style="color: aquamarine;font-weight: bold;">Microsoft Azure Fundamentals</a></td>
+                                <td>2023</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/power_platform_badge_1524x828.png" style="color: aquamarine;font-weight: bold;">Power Platform Advisor</a></td>
+                                <td>2023</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://cp.certmetrics.com/amazon/en/public/verify/credential/71W8HRNK5E14Q0KR" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
+                                <td>2022</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/cspo_cert.png" style="color: aquamarine;font-weight: bold;">Certified Product Owner</a></td>
+                                <td>2021</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/csm_cert.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
+                                <td>2017</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/MannUnityCert2017.png" style="color: aquamarine;font-weight: bold;">Unity Certified Developer</a></td>
+                                <td>2017</td>
+                            </tr>                            
                         </tbody>
                     </table>
                 </div>
@@ -530,7 +572,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Android (Native)</td>
+                                <td>Android (Java)</td>
                                 <td>2</td>
                             </tr>
                             <tr>
@@ -538,7 +580,7 @@
                                 <td>2</td>
                             </tr>
                             <tr>
-                                <td>iOS</td>
+                                <td>iOS (Objective C)</td>
                                 <td>1</td>
                             </tr>
                         </tbody>
@@ -607,34 +649,18 @@
                     <table class="table table-bordered table-inversed">
                         <thead class="thead-inverse">
                             <tr>
-                                <th>Certifications</th>
-                                <th>Year Acquired</th>
+                                <th>Cloud & AI Development</th>
+                                <th>Experience in Years</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/MannUnityCert2017.png" style="color: aquamarine;font-weight: bold;">Unity Certified Developer</a></td>
-                                <td>2017</td>
+                                <td>AWS</td>
+                                <td>2</td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="img/certifications/csm_cert.png" style="color: aquamarine;font-weight: bold;">Certified Scrum Master</a></td>
-                                <td>2017</td>
-                            </tr>
-                            <tr>
-                                <td><a target="_blank" href="img/certifications/cspo_cert.png" style="color: aquamarine;font-weight: bold;">Certified Product Owner</a></td>
-                                <td>2021</td>
-                            </tr>
-                            <tr>
-                                <td><a target="_blank" href="https://cp.certmetrics.com/amazon/en/public/verify/credential/71W8HRNK5E14Q0KR" style="color: aquamarine;font-weight: bold;">AWS Cloud Practitioner</a></td>
-                                <td>2022</td>
-                            </tr>
-                            <tr>
-                                <td><a target="_blank" href="https://learn.microsoft.com/api/credentials/share/en-us/mann0nomix/2AE3DB3B3C0B0022?sharingId=204F6D5D32A0A419" style="color: aquamarine;font-weight: bold;">Microsoft Azure Fundamentals</a></td>
-                                <td>2023</td>
-                            </tr>
-                            <tr>
-                                <td><a target="_blank" href="img/certifications/power_platform_badge_1524x828.png" style="color: aquamarine;font-weight: bold;">Power Platform Advisor</a></td>
-                                <td>2023</td>
+                                <td>Azure</td>
+                                <td>1</td>
                             </tr>
                         </tbody>
                     </table>
@@ -650,14 +676,14 @@
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
                     <p>Wondering how to start a project in games or mixed reality?</p>
-                    <p>Are you seeking a DJ or musical advice?</p>
+                    <p>Need music produced for your next movie or video game?</p>
                     </br>
                     <p>Reach out and connect with me on Social Media!</p>
                 </div>
                 <div class="col-lg-12 text-center">
                     <a href="mailto:mannmade@udel.edu">
                         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                        <p>mannmade@udel.edu</p>
+                        <p>techmann@udel.edu</p>
                     </a>
                 </div>
             </div>
