--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <p class="text-faded">The Tech Mann has worked with big name companies like Ecotech Marine and Highmark Health. He then became a technical R&D specialist for Comcast, the largest corporation in Philadelphia, developing virtual and mixed reality experiences for 6 years.</p>
                     <p class="text-faded">Today, the Tech Mann specializes in cloud development as a certified Scrum Master & Product Owner, contributing to the safety, support, & security of the US government's monetary policy.</p>
                     <p class="text-faded">In his free time, the Tech Mann immerses himself in his musical efforts, making music for video game communities, volunteering, & assisting others at gaming conventions.</p>
-                    <p class="text-faded">The Tech Mann is remain focused for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at the <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
+                    <p class="text-faded">The Tech Mann remained focused for 6 years to earn his black sash in the art of Wing Chun kung fu at <a href="https://www.instagram.com/philadelphiawingchunschool" style="color: aquamarine;font-weight: bold;" target="_blank">Philadelphia Wing Chun</a>, and is now the latest swordsman at the <a href="https://www.phillykendo.com" style="color: aquamarine;font-weight: bold;" target="_blank">US Yong Kum Kwan Kendo school</a>.</p>
                 </div>
             </div>
         </div>
